--- a/PDFParser/PDFParser.vcxproj
+++ b/PDFParser/PDFParser.vcxproj
@@ -82,6 +82,7 @@
       <PreprocessorDefinitions>WIN32;_DEBUG;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <AdditionalOptions>/D DLLTEST_EXPORT /Zc:__cplusplus %(AdditionalOptions)</AdditionalOptions>
       <LanguageStandard>stdcpp17</LanguageStandard>
+      <OpenMPSupport>true</OpenMPSupport>
     </ClCompile>
     <Link>
       <AdditionalDependencies />
@@ -95,6 +96,7 @@
       <PreprocessorDefinitions>_DEBUG;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <AdditionalOptions>/D DLLTEST_EXPORT /Zc:__cplusplus %(AdditionalOptions)</AdditionalOptions>
       <LanguageStandard>stdcpp17</LanguageStandard>
+      <OpenMPSupport>true</OpenMPSupport>
     </ClCompile>
     <Link>
       <AdditionalDependencies />
@@ -108,6 +110,7 @@
       <PreprocessorDefinitions>WIN32;NDEBUG;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <LanguageStandard>stdcpp17</LanguageStandard>
       <AdditionalOptions>/D DLLTEST_EXPORT /Zc:__cplusplus %(AdditionalOptions)</AdditionalOptions>
+      <OpenMPSupport>true</OpenMPSupport>
     </ClCompile>
     <Link>
       <AdditionalDependencies />
@@ -121,6 +124,7 @@
       <PreprocessorDefinitions>NDEBUG;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <LanguageStandard>stdcpp17</LanguageStandard>
       <AdditionalOptions>/D DLLTEST_EXPORT /Zc:__cplusplus %(AdditionalOptions)</AdditionalOptions>
+      <OpenMPSupport>true</OpenMPSupport>
     </ClCompile>
     <Link>
       <AdditionalDependencies />
@@ -128,9 +132,17 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClInclude Include="character_types.hpp" />
+    <ClInclude Include="pdfparser.graphics_state_stack.hpp" />
+    <ClInclude Include="pdfparser.chroma.hpp" />
+    <ClInclude Include="pdfparser.graphics_state.hpp" />
+    <ClInclude Include="pdfparser.line_style.hpp" />
+    <ClInclude Include="pdfparser.pdfcontents_builder.hpp" />
+    <ClInclude Include="pdfparser.pdfpage_builder.hpp" />
+    <ClInclude Include="pdfparser.space.hpp" />
+    <ClInclude Include="pdfparser.text_style.hpp" />
     <ClInclude Include="PDFReader.PagesModel.hpp" />
+    <ClInclude Include="PDFReader.PDFContents.hpp" />
     <ClInclude Include="type_traits_extended.hpp" />
-    <ClInclude Include="pdfparser.data_types.hpp" />
     <ClInclude Include="pdfparser.document_error.hpp" />
     <ClInclude Include="pdfparser.object_not_found_error.hpp" />
     <ClInclude Include="pdfparser.istream_extended_error.hpp" />
@@ -150,8 +162,9 @@
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="AssemblyInfo.cpp" />
-    <ClCompile Include="pdfparser.data_types.cpp" />
+    <ClCompile Include="pdfparser.graphics_state_stack.cpp" />
     <ClCompile Include="pdfparser.object_not_found_error.cpp" />
+    <ClCompile Include="pdfparser.space.cpp" />
     <ClCompile Include="PDFReader.PagesModel.cpp" />
     <ClCompile Include="pdfparser.parse_error.cpp" />
     <ClCompile Include="pdfparser.istream_extended_error.cpp" />
