--- a/PDFParser/PDFParser.vcxproj.filters
+++ b/PDFParser/PDFParser.vcxproj.filters
@@ -174,6 +174,18 @@
     <ClInclude Include="pdfparser.contents_parser.hpp">
       <Filter>pdfparser\document_reader\page_tree_parser\page_parser\contents_parser</Filter>
     </ClInclude>
+    <ClInclude Include="pdfparser.document_reader.ipp">
+      <Filter>pdfparser\document_reader</Filter>
+    </ClInclude>
+    <ClInclude Include="pdfparser.page_tree_parser.ipp">
+      <Filter>pdfparser\document_reader\page_tree_parser</Filter>
+    </ClInclude>
+    <ClInclude Include="pdfparser.page_parser.ipp">
+      <Filter>pdfparser\document_reader\page_tree_parser\page_parser</Filter>
+    </ClInclude>
+    <ClInclude Include="pdfparser.contents_parser.ipp">
+      <Filter>pdfparser\document_reader\page_tree_parser\page_parser\contents_parser</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="AssemblyInfo.cpp">
@@ -200,9 +212,6 @@
     <ClCompile Include="pdfparser.object_not_found_error.cpp">
       <Filter>pdfparser\document_reader\object_parser</Filter>
     </ClCompile>
-    <ClCompile Include="pdfparser.document_reader.cpp">
-      <Filter>pdfparser\document_reader</Filter>
-    </ClCompile>
     <ClCompile Include="pdfparser.space.cpp">
       <Filter>pdfparser\document_reader\page_tree_parser\page_parser\contents_parser\pdfcontents_builder\graphics_state_stack\graphics_state</Filter>
     </ClCompile>
@@ -211,6 +220,12 @@
     </ClCompile>
     <ClCompile Include="PDFReader.PagesModel.cpp">
       <Filter>PDFReader\PagesModel</Filter>
+    </ClCompile>
+    <ClCompile Include="pdfparser.pdfcontents_builder.cpp">
+      <Filter>pdfparser\document_reader\page_tree_parser\page_parser\contents_parser\pdfcontents_builder</Filter>
+    </ClCompile>
+    <ClCompile Include="pdfparser.pdfpage_builder.cpp">
+      <Filter>pdfparser\document_reader\page_tree_parser\page_parser\pdfpage_builder</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
